RESOLVED FIXED90392
Column height and count calculation ignores most overflow
https://bugs.webkit.org/show_bug.cgi?id=90392
Summary Column height and count calculation ignores most overflow
mitz
Reported 2012-07-02 10:47:16 PDT
Created attachment 150447 [details] Test case <rdar://problem/11135525> When the contents of a multi-column block includes overflowing blocks, the column count and height calculation does not account for it. As a result, the number and/or height of columns becomes insufficient to contain the overflow (even as overflow columns). See attached test case.
Attachments
Test case (2.34 KB, text/html)
2012-07-02 10:47 PDT, mitz
no flags
Compute and use the overflow height in RenderBlock::relayoutForPagination() (9.57 KB, patch)
2012-07-02 10:50 PDT, mitz
dino: review+
webkit.review.bot: commit-queue-
Archive of layout-test-results from gce-cr-linux-04 (452.27 KB, application/zip)
2012-07-02 12:41 PDT, WebKit Review Bot
no flags
mitz
Comment 1 2012-07-02 10:50:57 PDT
Created attachment 150449 [details] Compute and use the overflow height in RenderBlock::relayoutForPagination()
WebKit Review Bot
Comment 2 2012-07-02 12:41:29 PDT
Comment on attachment 150449 [details] Compute and use the overflow height in RenderBlock::relayoutForPagination() Attachment 150449 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/13127277 New failing tests: fast/multicol/vertical-rl/rules-with-border-before.html fast/line-grid/line-grid-into-columns.html plugins/iframe-shims.html
WebKit Review Bot
Comment 3 2012-07-02 12:41:32 PDT
Created attachment 150462 [details] Archive of layout-test-results from gce-cr-linux-04 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: gce-cr-linux-04 Port: <class 'webkitpy.common.config.ports.ChromiumXVFBPort'> Platform: Linux-2.6.39-gcg-201203291735-x86_64-with-Ubuntu-10.04-lucid
mitz
Comment 4 2012-07-02 21:07:30 PDT
(In reply to comment #2) > (From update of attachment 150449 [details]) > Attachment 150449 [details] did not pass chromium-ews (chromium-xvfb): > Output: http://queues.webkit.org/results/13127277 > > New failing tests: > fast/multicol/vertical-rl/rules-with-border-before.html I’ll land updated results > fast/line-grid/line-grid-into-columns.html I couldn’t reproduce this failure > plugins/iframe-shims.html Seems to be an unrelated crash
mitz
Comment 5 2012-07-02 21:08:32 PDT
Note You need to log in before you can comment on or make changes to this bug.