Column height and count calculation ignores most overflow https://bugs.webkit.org/show_bug.cgi?id=90392

Reviewed by Dean Jackson.

Source/WebCore:

Test: fast/multicol/overflow-content.html

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::relayoutForPagination): Changed to compute the overflow from children
and use the layout overflow height rather the content height.

LayoutTests:

* fast/multicol/overflow-content-expected.html: Added.
* fast/multicol/overflow-content.html: Added.
* fast/multicol/vertical-rl/rules-with-border-before-expected.png:



Canonical link: https://commits.webkit.org/108288@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@121728 268f45cc-cd09-0410-ab3c-d52691b4dbfc